--- a/style.css
+++ b/style.css
@@ -50,22 +50,23 @@ header{
 
 .info{
     display: grid;
+    align-items: center;
+    justify-content: center;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto;
     grid-column: 1/2;
-    padding-top: 3rem;
     padding-left: 3rem;
 
 }
 
 .cinematic{
-    display: grid;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.cinematic h2, video{
-    margin-left: 50px;
+.cinematic video{
+    margin-left: 20px;
 }
 
 .cinematic h2{
@@ -96,11 +97,17 @@ h3 a{
 }
 
 .logo h1{
+    align-self: center;
     font-size: 50px;
 }
 
-h1{
-    font-size: 49px;
+.text h1{
+    margin-top: 0;
+    font-size: 45px;
+}
+
+.text, video{
+    margin-top: -83px;
 }
 
 .button, .button2{
@@ -129,7 +136,7 @@ h1{
 }
 
 .buttons{
-    margin-top: 180px;
+    margin-top: 13vh;
     display: flex;
 }
 
@@ -152,20 +159,17 @@ h1{
     color: white;
 }
 
+@media only screen and (max-width: 1400px) {
 
+    h1{
+        font-size: 33px;
+    }
+}
 
-@media only screen and (max-width: 1150px) {
+@media only screen and (max-width: 1250px) {
 
     .button, .button2{
         width: 125px;
-    }
-
-    .info{
-        height: 100vh;
-        position: absolute;
-        margin-top: auto;
-        margin-bottom: auto;
-        grid-template-rows: 1fr;
     }
 
     .buttons{
@@ -177,7 +181,6 @@ h1{
     }
 
     .info{
-        padding-top: 0;
         display: grid;
         justify-content: center;
         align-items: center;
@@ -204,10 +207,6 @@ h1{
 
 @media only screen and (max-width: 450px) {
 
-    .button > p > span{
-        display: none;
-    }
-
     .logo{
         padding-left: 1.5rem;
     }
@@ -228,5 +227,4 @@ h1{
     .button2{
         margin-left: 30px;
     }
-
 }
